--- a/jdocuments-wasm-client/style.css
+++ b/jdocuments-wasm-client/style.css
@@ -1,16 +1,19 @@
+
 html, body {
     margin: 0;
     padding: 0;
-    height: 100%;
     width: 100%;
+    height: 100%;
+}
+
+body {
+    background-color: #141414;
     overflow: hidden;
 }
 
 canvas {
     display: block;
-    margin: 0;
-    padding: 0;
-    border: none;
     width: 100%;
     height: 100%;
+    border: none;
 }
